Fixed centered and right alignment in headers and footers

--- a/responsive.css
+++ b/responsive.css
@@ -20,17 +20,17 @@
     }
     
     /* Headers */
-    .header.center{ margin: -10px 0px 10px 33%; }
+    .header.center{ margin: -10px auto 10px auto; }
     .header.right{ margin: -10px 0px 10px  67%; }
     
-    .header.center.half{ margin: -10px 0px 10px 33%; }
+    .header.center.half{ margin: -10px auto 10px auto; }
     .header.right.half{ margin: -10px 0px 10px 67%; }
     
     /* Footers */
-    .footer.center{ margin: 10px 0px -10px 33%; }
+    .footer.center{ margin: 10px auto -10px auto; }
     .footer.right{ margin: 10px 0px -10px 67%; }
     
-    .footer.center.half{ margin: 0px 0px -10px 33%; }
+    .footer.center.half{ margin: 0px auto -10px auto; }
     .footer.right.half{ margin: 0px 0px -10px 67%; }
 }
 
@@ -56,17 +56,17 @@
     }
     
     /* Headers */
-    .header.center{ margin: -10px 0px 10px 18%; }
-    .header.right{ margin: -10px 0px 10px  42%; }
+    .header.center{ margin: -10px auto 10px auto; }
+    .header.right{ margin: -10px -10px 10px  auto; }
     
-    .header.center.half{ margin: -10px 0px 10px 18%; }
-    .header.right.half{ margin: -10px 0px 10px 42%; }
+    .header.center.half{ margin: -10px auto 10px auto; }
+    .header.right.half{ margin: -10px -10px 10px auto; }
     
     /* Footers */
-    .footer.center{ margin: 10px 0px -10px 18%; }
-    .footer.right{ margin: 10px 0px -10px 42%; }
+    .footer.center{ margin: 10px auto -10px auto; }
+    .footer.right{ margin: 10px -10px -10px auto; }
     
-    .footer.center.half{ margin: 0px 0px -10px 18%; }
-    .footer.right.half{ margin: 0px 0px -10px 42%; }
+    .footer.center.half{ margin: 0px auto -10px auto; }
+    .footer.right.half{ margin: 0px -10px -10px auto; }
 }
 
